--- a/feelgood/3. Основная программа/урок 1/дз/style/style.less
+++ b/feelgood/3. Основная программа/урок 1/дз/style/style.less
@@ -186,6 +186,7 @@ header {
                 line-height: 18px;
             }
             address {
+                text-decoration: none;
                 color: #989898;
                 font-size: 14px;
                 font-weight: 400;
