--- a/feelgood/1-2. Базовые курсы/2. HMML CSS/style.less
+++ b/feelgood/1-2. Базовые курсы/2. HMML CSS/style.less
@@ -1,14 +1,12 @@
-
-
-.content {
+    .content {
     width: 90%;
     margin: 0 auto;
-    height: 80%;
     overflow: hidden;
 }
 
 .block1 {
     width: 40%;
+    height: 50%;
     margin: 5% 0% 0% 5%;
     float: left;
     transition: 0.7s;
@@ -19,19 +17,16 @@
     .block1;
     margin: 5% 5% 0% 0%;
     float: right;
-
 }
+
 .block3 {
     clear: both;
     .block1;
-
-
-
 }
 
 .block1:hover,
 .block2:hover,
-.block3:hover{
+.block3:hover {
     transform: scale(1.1);
     transition: 0.7s;
     box-shadow: 1px 7px 20px 6px grey;
@@ -41,6 +36,7 @@ img {
     width: 100%;
 }
 
-h1,h2 {
+h1,
+h2 {
     text-align: center;
 }
